# matrix

./: CMakeLists.txt  README.md  main.cpp  makefile  methods.cpp  setup.h
source/: basic_matrix_methods.cpp  basic_matrix_methods.hpp  gauss_det.cpp  main.cpp  minor_det.cpp  setup.h  setup.hpp  square_matrix_methods.cpp  square_matrix_methods.hpp
